Added quote saving functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-server.port=8081
+server.port=8080
+logging.level.com.demos.demowebflux=debug
 
 guru.host=localhost
-guru.port=8081
-guru.path=quotes
-
-logging.level.com.demos.demowebflux=debug
+guru.port=8080
+guru.path=quotesx
