Just playing with webflux

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -3,4 +3,5 @@ logging.level.com.demos.demowebfluxclient=debug
 serverinfo.host=localhost
 servertoconnectinfo.host=localhost
 servertoconnectinfo.port=8080
-servertoconnectinfo.path=quotesx
+servertoconnectinfo.quotespath=quotesx
+servertoconnectinfo.employeepath=employees
